test/errors/max_depth_cero.mg
% EXPECT: max_depth debe ser al menos 1
display_size 5 5
max_depth 0
polyline { 0 0  1 1 }
